--- a/style.css
+++ b/style.css
@@ -35,14 +35,11 @@
 .last-name {
 	font-weight: 300;
 }
-.content {
-	margin: 3rem;
-}
 .content .title {
 	font-size: 24px;
 	font-weight: 400;
 	color: #f000b6;
-	padding: 1rem;
+	padding: 2rem 5rem 1rem;
 	text-align: center;
 }
 .content .subtitle {
@@ -52,23 +49,29 @@
 	padding: 2rem;
 }
 .content .songs {
-	/* padding: 1rem; */
 	font-weight: 300;
 	font-size: 18px;
+	padding: 2rem;
 }
 .songs .bonus {
 	margin-top: 1rem;
 }
 .songs .player {
-	padding: 1rem;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	gap: 5px;
 	background: #f1f3f4;
-	border-radius: 50px;
 	border: 1px solid #f000b6;
 	margin-bottom: 1rem;
+}
+.songs .player .song-cover {
+	height: 100px;
+	width: 100px;
+}
+.songs .player .song-cover img {
+	width: inherit;
+	height: inherit;
 }
 .content .footer {
 	font-weight: 300;
@@ -83,4 +86,112 @@
 	color: #0047ff;
 	font-weight: 400;
 	text-decoration: underline;
+}
+.left {
+	height: 124px;
+	width: 124px;
+}
+.left img {
+	height: inherit;
+	width: inherit;
+	object-fit: cover;
+}
+.main {
+	display: flex;
+	border: 3px solid #fd6ad8;
+	border-radius: 10px;
+	overflow: hidden;
+	margin: 1rem 0;
+}
+.duration {
+	width: 100%;
+}
+.duration input {
+	width: inherit;
+}
+.middle {
+	width: 30%;
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: center;
+}
+.middle p {
+	padding: 0.5rem;
+	font-size: 13px;
+	font-weight: 400;
+	letter-spacing: 2px;
+}
+.right {
+	width: 40%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 3px;
+}
+.right .play,
+.right .duration,
+.right .volume {
+	padding: 4px;
+}
+/* both range slider part */
+.duration input[type="range"] {
+	-webkit-appearance: none;
+	outline: none;
+	height: 2px;
+	background: grey;
+	width: inherit;
+}
+.duration input[type="range"]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	height: 20px;
+	width: 20px;
+	background: #fd6ad8;
+	border-radius: 50%;
+	cursor: pointer;
+}
+.volume input[type="range"] {
+	-webkit-appearance: none;
+	outline: none;
+	height: 2px;
+	background: grey;
+	width: inherit;
+}
+.volume input[type="range"]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	height: 20px;
+	width: 20px;
+	background: #fd6ad8;
+	border-radius: 50%;
+	cursor: pointer;
+}
+.volume {
+	width: 100%;
+	display: flex;
+	align-items: center;
+}
+.volume p,
+.volume i {
+	padding-right: 2px;
+}
+#play {
+	background: #fd6ad8;
+}
+.right button:hover {
+	background: #fd6ad8;
+}
+.right .play i:before {
+	color: #fff;
+	font-size: 20px;
+}
+.right .volume i:before {
+	color: grey;
+	font-size: 20px;
+}
+.play button {
+	background: #fd6ad8;
+	border: none;
+	height: 50px;
+	width: 50px;
+	border-radius: 50%;
 }
