--- a/style.css
+++ b/style.css
@@ -7,14 +7,12 @@
 }
 
 .banner {
-	margin-top: 5rem;
+	margin-top: 2rem;
 	position: relative;
 }
 .banner-img {
-	background-image: url(./assets/new\ KK.jpg);
-	width: 80%;
-	height: 80%;
-	margin-left: -5rem;
+	width: 95%;
+	height: 100%;
 }
 .banner .name {
 	font-size: 24px;
@@ -36,22 +34,22 @@
 	font-weight: 300;
 }
 .content .title {
-	font-size: 24px;
+	font-size: 20px;
 	font-weight: 400;
 	color: #f000b6;
-	padding: 2rem 5rem 1rem;
+	padding: 1rem 4rem 1rem;
 	text-align: center;
 }
 .content .subtitle {
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 300;
 	text-align: center;
-	padding: 2rem;
+	padding: 0 1rem;
 }
 .content .songs {
 	font-weight: 300;
 	font-size: 18px;
-	padding: 2rem;
+	padding: 1rem;
 }
 .songs .bonus {
 	margin-top: 1rem;
@@ -88,18 +86,18 @@
 	text-decoration: underline;
 }
 .left {
-	height: 124px;
-	width: 124px;
+	height: 100px;
+	width: 100px;
 }
 .left img {
 	height: inherit;
 	width: inherit;
 	object-fit: cover;
+	border-radius: 10px;
 }
 .main {
 	display: flex;
-	border: 3px solid #fd6ad8;
-	border-radius: 10px;
+	align-items: center;
 	overflow: hidden;
 	margin: 1rem 0;
 }
@@ -110,29 +108,33 @@
 	width: inherit;
 }
 .middle {
-	width: 30%;
 	display: flex;
-	flex-direction: column;
-	align-items: start;
-	justify-content: center;
+	flex-direction: row;
+	align-items: center;
 }
 .middle p {
-	padding: 0.5rem;
-	font-size: 13px;
+	font-size: 12px;
 	font-weight: 400;
-	letter-spacing: 2px;
+	padding: 8px;
 }
-.right {
+/* .right {
 	width: 40%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding: 3px;
-}
+} */
 .right .play,
 .right .duration,
 .right .volume {
 	padding: 4px;
+}
+.right-outer {
+	width: 100%;
+	padding-left: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	margin: 8px;
 }
 /* both range slider part */
 .duration input[type="range"] {
@@ -180,7 +182,7 @@
 .right button:hover {
 	background: #fd6ad8;
 }
-.right .play i:before {
+.play i:before {
 	color: #fff;
 	font-size: 20px;
 }
@@ -194,4 +196,123 @@
 	height: 50px;
 	width: 50px;
 	border-radius: 50%;
+}
+.about-img {
+	position: relative;
+	overflow: hidden;
+}
+.about-img img {
+	width: 100vw;
+	margin-left: -30%;
+}
+.about-content {
+	width: 200px;
+	height: 200px;
+	background: white;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 0;
+	text-align: center;
+	padding: 0.5rem;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=40, Direction=0, Color=#000000)"; /*IE 8*/
+	-moz-box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /*FF 3.5+*/
+	-webkit-box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /*Saf3-4, Chrome, iOS 4.0.2-4.2, Android 2.3+*/
+	box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=40, Direction=135, Color=#000000); /*IE 5.5-7*/
+}
+.about-title {
+	font-size: 20px;
+	font-weight: 400;
+	color: #f000b6;
+}
+.about-inner-content {
+	text-align: left;
+	font-size: 14px;
+	font-weight: 300;
+	padding: 4px;
+}
+
+@media only screen and (min-width: 600px) {
+	/* For tablets: */
+	.content {
+		margin: 1rem 20%;
+	}
+	.about-img img {
+		width: 500px;
+		margin-left: -20%;
+	}
+	.about-content {
+		width: 300px;
+		height: 250px;
+		background: white;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		right: 0;
+		text-align: center;
+		padding: 2rem;
+		-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=40, Direction=0, Color=#000000)"; /*IE 8*/
+		-moz-box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /*FF 3.5+*/
+		-webkit-box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /*Saf3-4, Chrome, iOS 4.0.2-4.2, Android 2.3+*/
+		box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
+		filter: progid:DXImageTransform.Microsoft.Shadow(Strength=40, Direction=135, Color=#000000); /*IE 5.5-7*/
+	}
+}
+@media only screen and (min-width: 768px) {
+	/* For desktop: */
+	.banner {
+		margin-top: 2rem;
+		position: relative;
+		text-align: center;
+	}
+	.banner-img {
+		width: 800px;
+		height: 100%;
+	}
+	.content .title {
+		font-size: 20px;
+		font-weight: 400;
+		color: #f000b6;
+		padding: 0 4rem 1rem;
+		text-align: center;
+	}
+	.about-img img {
+		width: 700px;
+		margin-left: -10%;
+	}
+	.about-content {
+		width: 450px;
+		height: 300px;
+		background: white;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		right: 0;
+		text-align: center;
+		padding: 2rem;
+		-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=40, Direction=0, Color=#000000)"; /*IE 8*/
+		-moz-box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /*FF 3.5+*/
+		-webkit-box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /*Saf3-4, Chrome, iOS 4.0.2-4.2, Android 2.3+*/
+		box-shadow: 0 15px 40px -17px rgba(0, 0, 0, 0.4); /* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
+		filter: progid:DXImageTransform.Microsoft.Shadow(Strength=40, Direction=135, Color=#000000); /*IE 5.5-7*/
+	}
+	.content .songs {
+		font-weight: 300;
+		font-size: 18px;
+		padding: 1rem 6rem;
+	}
+	.content .title {
+		font-size: 20px;
+		font-weight: 400;
+		color: #f000b6;
+		padding: 1rem 6rem 1rem;
+		text-align: center;
+	}
+	.content .subtitle {
+		font-size: 16px;
+		font-weight: 300;
+		text-align: center;
+		padding: 0 8rem;
+	}
 }
