--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@
 	padding: 1rem 4rem 1rem;
 	text-align: center;
 }
+.content .title span {
+	display: flex;
+	flex-direction: column;
+}
 .content .subtitle {
 	font-size: 16px;
 	font-weight: 300;
@@ -200,7 +204,7 @@
 	margin-left: -30%;
 }
 .about-content {
-	width: 250px;
+	width: 55vw;
 	height: max-content;
 	background: rgba(255, 255, 255, 0.8);
 	position: absolute;
@@ -243,7 +247,7 @@
 	}
 	.about-content {
 		height: max-content;
-		width: 300px;
+		width: 45vw;
 		background: rgba(255, 255, 255, 0.8);
 		position: absolute;
 		top: 50%;
@@ -286,7 +290,7 @@
 		margin-left: -10%;
 	}
 	.about-content {
-		width: 450px;
+		width: 35vw;
 		height: max-content;
 		background: rgba(255, 255, 255, 0.8);
 		position: absolute;
@@ -304,6 +308,7 @@
 	.about-inner-content > p {
 		margin-top: 1rem;
 		font-weight: 300;
+		font-size: 14px;
 	}
 	.content .songs {
 		font-weight: 300;
