--- a/private/style.css
+++ b/private/style.css
@@ -341,3 +341,9 @@
 		padding: 0 8rem;
 	}
 }
+@media only screen and (min-width: 768px) {
+	.about-img img {
+		width: 700px;
+		margin-left: -10%;
+	}
+}
