--- a/private/style.css
+++ b/private/style.css
@@ -246,6 +246,8 @@
 }
 .copyright {
 	font-size: 12px;
+	display: flex;
+	flex-direction: column;
 }
 
 @media only screen and (min-width: 600px) {
@@ -341,7 +343,7 @@
 		padding: 0 8rem;
 	}
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1200px) {
 	.about-img img {
 		width: 700px;
 		margin-left: -10%;
