--- a/private/style.css
+++ b/private/style.css
@@ -346,6 +346,6 @@
 @media only screen and (min-width: 1200px) {
 	.about-img img {
 		width: 700px;
-		margin-left: -10%;
+		margin-left: 0;
 	}
 }
